adds implementations for kv handlers
